2018-04-23 Inge Wortel <ingewortel@gmail.com>
	* src/CPM.js (neighi2D, neighi3D ) : changed computation of neighborhood to create a 
	torus grid. Both functions have an argument torus (true by default). If torus is false,
	the neighbors that cross the grid border are returned as NaN.
	* src/CPMStats.js (getCentroidOf) : changed computation of centroids to account for
	torus. New functions now return the pixel coordinates of connected components of a 
	cell (returnConnectedComponentsOfCell), compute the centroids of each (pixelsToCentroid),
	and compute the weighted average of these centroids, corrected for crossing the border
	(getCentroidOfCellWithTorus). 
	* src/CPMStats.js (getConnectedComponents, getConnectedness, getPercentageAct,
	getCentroids ) : these functions now take an object cpi (result of this.cellpixelsi())
	as an optional argument, to make code more efficient when several metrics are 
	computed on cpi.

2018-03-29 Inge Wortel <ingewortel@gmail.com>
	* src/CPM.js : rewritten with new javascript "class" syntax. Also restructured the 
	code, implemented a dynamic computation of the hamiltonian. The attribute 
	"this.terms" contains the terms of the Hamiltonian to be considered. By default, the 
	terms are ["adhesion","volume","perimeter", "actmodel"]. The basic CPM class also 
	supports terms "connectivity" and "invasiveness", but these are not part of the 
	Hamiltonian by default. Add them by typing eg C.terms.push["connectivity"]. Changed
	"var" to the new "const" and "let" wherever possible.
	* src/CPM.js ( deltaH ) : computes the Hamiltonian depending on this.terms.
	Also logs Hamiltonian terms to the console if this.logterms = true.
	* src/CPM.js ( deltaHadhesion, deltaHvolume, deltaHperimeter, deltaHconnectivity, 
	deltaHinvasiveness, deltaHactmodel ) : new functions to compute the different terms
	of the Hamiltonian. 
	* src/CPM.js ( deltaHconnectivity ) : changed so that it computes the cost appropriately