@@ -32,7 +32,7 @@ function initialize(){
 		T : 20,
 		ACT_MEAN : "geometric" 
 	})
-	C.addStromaBorder()
+	//C.addStromaBorder()
 	// Create a canvas to draw on
 	Cim = new CPMCanvas( C )
 
