@@ -1,10 +1,10 @@
 all : output/2d.mp4
 
 output/2d.mp4 : output/0.png
-	ffmpeg -y -framerate 5 -i output/%d.png -c:v libx264 -r 30 -pix_fmt yuv420p output/2d.mp4
+	ffmpeg -y -framerate 10 -i output/%d.png -c:v libx264 -r 30 -pix_fmt yuv420p output/2d.mp4
 
 output/0.png : run-2d.js
-	node $< 5 python 2img.py
+	node $< 10 python 2img.py
 
 output/2dchemokine0.png : run-2d-chemokine.js
 	node $< 10 python 2img.py
